r17 ====================================================================
+ добавлен класс CrossfadeGenGradGen (см. описание)
- исправлен метод ConstantGradGen.init_attrs() - пытался получить
  параметр по имени "value" вместо "values"
- исправления в конструкторе класса GradPosition, из-за которого мог
  производиться ненужный пересчёт из секунд
- убрана поддержка неиспользуемого параметра fixrange в конструкторе
  класса GradSender, т.к. ещё с 11й ревизии передаваемые olad значения
  принудительно вгоняются в требуемый диапазон в методе __DMX_send_frame()
- исправлен метод SequenceGenGradGen.get_next_value() - производилась
  лишняя итерация
+ дополнена демонстрационная программа example.py

r16 ====================================================================
* метод GradGen.param_get_grad() переименован в kwargs_get(), т.к.
  1. предназначен для получения параметров любого типа;
  2. предназначен для обработки kwargs из метода init_attrs(), а не
     для получения параметров экземпляра класса, как могло бы показаться
     по старому названию метода
* метод GradGen.param_get_tof() переименован в kwargs_get_tof() по тем
  же соображениям
+ добавлен класс GenRecorderGen (см. описание)

r15 ====================================================================
- исправления в методе SequenceGenGradGen.init_attrs()
- исправления в демонстрационной программе example.py
- исправления в README.md
* изменён класс GradPosition:
  * "константа" DEFAULT_TICK_INTERVAL перенесена из класса GradSender
    в класс GradPosition
  * изменён метод set_length() - кроме числовых значений он теперь
    может получать строку вида ЧЧ:ММ:СС, см. описание метода set_length()
  * метод compute_length() убран, его функциональность перенесена
    в метод set_length()
  - убран метод set_length_from_time() по тем же причинам
  + метод set_direction() и соотв. параметр конструктора может принимать
    кроме положительного/отрицательного числа также булевское значение,