@@ -1,4 +1,6 @@
 r17 ====================================================================
+* класс GenGradGen переименован в GroupGenGradGen, т.к. является предком
+  только для специфических классов, а не для всех
 + добавлен класс CrossfadeGenGradGen (см. описание)
 - исправлен метод ConstantGradGen.init_attrs() - пытался получить
   параметр по имени "value" вместо "values"
